test/good/77.zlus
(* Unreachable parameterised state in parallel with variable init *)


let hybrid f (z) = x where
  rec init x = 1.0 
  and automaton
      | S1 -> do x = 1.0 until z on (0.1 < 0.2) then S2(42.0)
      | S2(x0) -> do x = x0 done
      end

